# cpp-capstone-project

./: README.md
project/: CMakeLists.txt  README.md
project/include/: LinkedList.h  Node.h
project/src/: main.cpp
